<resources>
    <string name="app_name">Sobhi Mohammad</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sobhi Mohammad</string>
    <string name="nav_header_subtitle">www.sobhimohammad.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="about_us_title">About us</string>
    <string name="change_theme_title">Theme</string>
    <string name="privacy_policy_fragment_title">Privacy Policy</string>
    <string name="web_site_title">Website</string>


    <string name="cannot_load_play_lists">Cannot load Play Lists!</string>
    <string name="cannot_load_new_videos">Cannot load new Videos!</string>
    <string name="cannot_load_play_list_videos">Cannot load Play List Videos!</string>
    <string name="cannot_load_description">Cannot load description!</string>
    <string name="loading">Loading...</string>

    <string name="published_at">Published at:</string>


    <string name="default_notification_channel_id">Sobhi Mohammad</string>

    <string name="title_fragment_new_videos">New</string>
    <string name="title_fragment_favorites_videos">Favorites</string>
    <string name="title_fragment_play_lists">Play Lists</string>

    <string name="new_video_topic">new_video</string>
    <string name="general_topic">general</string>


    <string name="privacy_policy_title">Privacy policy</string>

    <string name="privacy_policy_text">

        السلام عليكم ورحمة الله وبركاته\n\n
لماذا نحن لانبيع الاعلانات\n\n
مع الاسف الاعلانات لايمكن التحكم بها من قبل المروجين فربما تتسبب بإظهار اعلانات خبيثة او تقوم بتخريب الاستعراض على من يريد استعراض التطبيق وهذا الامر الذي جعلنا لانبيع الاعلانات بسبب ان الاعلانات تظهر بعض من اشكال (الفيروسات-اعلانات سيئة)
ونحن نحرص بشكل دائم على سلامة من يستعرض التطبيق ونتيح له فرصة الاستعراض بدون اعلانات وبشكل مجاني
الهدف ترفيهي وليس ربحي التطبيق لا يحتوي على اي من اشكال الاعلانات.
</string>

    <string name="restart_app_warning">You should restart the App to apply new changes!</string>
    <string name="restart">Restart</string>
    <string name="not_now">Not now</string>
    <string name="close_app_warning">Do you want to close the App?</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="deletion_success">Deletion success!</string>
    <string name="deletion_failed">Deletion failed!</string>
    <string name="remove_from_favorites_warning">Do you want to remove this videos from Favorites?</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="saved">Saved</string>
    <string name="enter_valid_number">Please enter a valid number!</string>
    <string name="subscription_error">Subscription Error</string>
    <string name="subscribed">Subscribed</string>
    <string name="unsubscription_error">Unsubscription Error</string>
    <string name="unsubscribed">Unsubscribed</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="removing_error">Error by removing from favorites</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="adding_error">Error by adding to favorites</string>
    <string name="share_via">Share via</string>
    <string name="notification_settings">Notification settings:</string>
    <string name="new_videos_notifications">New Videos Notifications</string>
    <string name="general_notifications">General Notifications</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="sobhi_mohammad_translatable">Sobhi Mohammad</string>
    <string name="version">Version 1.0.1</string>
    <string name="powered_by">Powered by:</string>
    <string name="about_us_text">عازف وملحن موسيقي وموزع-التطبيق الرسمي
الكاتب جان فريسكور – بيروت هو من القلائل الذين يبتعدون عن الناس و يتنسّكون داخل الاستديو لينتشلوا من داخلهم كنوز ملوّنة باجمل الالحان و الكلمات , هو مايسترو يسافر بك الى عالم الخيال بانامله الذهبية التي قدّمت للكثير من النجوم اروع الالحان , بيروت تفتخر به كما وبلده سوريا يعشق فنّه و يتمنى ان يقّدم الاكثر , اغنى المكتبة الموسيقية في الوطن العربي بألحان اصبحت خالدة لان نسبة الاستماع اليها فاقت المعقول , هو الملحن و الموزع صبحي محمد الذي كنا في ضيافته داخل الاستديو الخاص به في لبنان</string>
    <string name="purple">Purple</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="brown">Brown</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="used_libraries">Used libraries</string>
    <string name="no_items">No Items to Display</string>
    <string name="new_videos">New Videos</string>
    <string name="play_lists">Play Lists</string>
    <string name="favorites">Favorites</string>
    <string name="favorite_videos">Favorite Videos</string>
    <string name="theme">Theme</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="website">Website</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="about_us">About Us</string>

    <string name="new_videos_list_count">Count of new videos:</string>

</resources>
