<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_videos"
            android:icon="@drawable/ic_new_icon"
            android:title="@string/new_videos" />
        <item
            android:id="@+id/nav_play_lists"
            android:icon="@drawable/ic_playlist"
            android:title="@string/play_lists"/>
        <item
            android:id="@+id/nav_favorites_videos"
            android:icon="@drawable/ic_heart"
            android:title="@string/favorite_videos" />

        <item
            android:id="@+id/nav_change_theme"
            android:icon="@drawable/ic_color_lens"
            android:title="@string/theme"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_privacy_policy"
                android:icon="@drawable/ic_account_box"
                android:title="@string/privacy_policy" />

            <item
                android:id="@+id/nav_home_page"
                android:icon="@drawable/ic_web"
                android:title="@string/website" />

            <item
                android:id="@+id/nav_rate_app"
                android:icon="@drawable/ic_star"
                android:title="@string/rate_app"/>

            <item
                android:id="@+id/nav_share_app"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_app"/>

            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_info"
                android:title="@string/about_us"/>

        </menu>
    </item>

</menu>
