<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:paddingTop="@dimen/normal_margin"
            android:textStyle="bold"
            android:textColor="@color/lightTextColor"
            android:textAlignment="center"
            android:text="@string/purple"
            android:background="@color/colorPrimary"
            android:id="@+id/purple_theme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:paddingTop="@dimen/normal_margin"
            android:textStyle="bold"
            android:textColor="@color/lightTextColor"
            android:textAlignment="center"
            android:text="@string/red"
            android:background="@color/redColorPrimary"
            android:id="@+id/red_theme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:paddingTop="@dimen/normal_margin"
            android:textStyle="bold"
            android:textColor="@color/lightTextColor"
            android:textAlignment="center"
            android:text="@string/yellow"
            android:background="@color/yellowColorPrimary"
            android:id="@+id/yellow_theme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:paddingTop="@dimen/normal_margin"
            android:textStyle="bold"
            android:textColor="@color/lightTextColor"
            android:textAlignment="center"
            android:text="@string/brown"
            android:background="@color/brownColorPrimary"
            android:id="@+id/brown_theme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:paddingTop="@dimen/normal_margin"
            android:textStyle="bold"
            android:textColor="@color/lightTextColor"
            android:textAlignment="center"
            android:text="@string/green"
            android:background="@color/greenColorPrimary"
            android:id="@+id/green_theme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:paddingTop="@dimen/normal_margin"
            android:textStyle="bold"
            android:textColor="@color/lightTextColor"
            android:textAlignment="center"
            android:text="@string/blue"
            android:background="@color/blueColorPrimary"
            android:id="@+id/blue_theme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>