<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:paddingTop="@dimen/small_margin"
        android:paddingBottom="@dimen/small_margin"
        android:orientation="horizontal"
        android:id="@+id/main_navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:id="@+id/show_new_videos_layout"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <ImageView
                android:tint="@color/colorPrimary"
                android:src="@drawable/ic_new_icon"
                android:id="@+id/iv_show_new_videos"
                android:layout_width="match_parent"
                android:layout_height="28dp" />

            <TextView
                android:id="@+id/tv_show_new_videos"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:text="@string/new_videos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:visibility="gone"
                android:id="@+id/new_videos_line"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/show_play_lists_layout"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <ImageView
                android:tint="@color/colorPrimary"
                android:src="@drawable/ic_playlist"
                android:id="@+id/iv_show_play_lists"
                android:layout_width="match_parent"
                android:layout_height="28dp" />

            <TextView
                android:id="@+id/tv_show_play_lists"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:text="@string/play_lists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:visibility="gone"
                android:id="@+id/play_lists_line"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/show_favorites_videos_layout"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="@dimen/mini_margin"
                android:tint="@color/colorPrimary"
                android:src="@drawable/ic_heart"
                android:id="@+id/iv_show_favorites_videos"
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <TextView
                android:id="@+id/tv_show_favorites_videos"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:text="@string/favorites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:visibility="gone"
                android:id="@+id/favorite_videos_line"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/main_fragment_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_navigation_bar" />
</LinearLayout>